@@ -10,7 +10,7 @@
 	preprocessor definition.  
 	However, in production code, this file should be EMPTY, 
 	and NO translation unit should depend on this i.e. do not include.  
-	$Id: devel_switches.h,v 1.52.10.1 2009/03/04 23:36:14 fang Exp $
+	$Id: devel_switches.h,v 1.52.10.2 2009/03/06 00:43:51 fang Exp $
  */
 
 #ifndef	__HAC_OBJECT_DEVEL_SWITCHES_H__
@@ -64,7 +64,6 @@
 	Useful for allowing top-level scope to be considered a
 	definition, where module <= process_definition.  
 	Also allows future support for nested definitions. 
-	Goal: 1
 	Status: perm'd (00-01-04-main-00-81-81)
 #define	SUPPORT_NESTED_DEFINITIONS	1
  */
@@ -85,9 +84,22 @@
 	parameters rather than keep a separate key in the footprint manager.
 	Rationale: make it easier to associate each footprint with
 	canonical complete type.
-	Goal: 1?
+	Goal: 1
+	Status: complete, tested
  */
 #define	FOOTPRINT_HAS_PARAMS			1
+
+/**
+	Define to 1 to have every footprint include a back-reference
+	to its owner.
+	Q: if a footprint has no members, do we ever need to worry
+		about back-references?  We might want to access
+		the original definition, even if it is empty.  
+	Goal: 1
+	Is easier to serialize dependence on has-params...
+		though not necessary.
+ */
+#define	FOOTPRINT_OWNER_DEF			(0 && FOOTPRINT_HAS_PARAMS)
 
 //- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -
 /**
